tests/negative/typecheck/args-mix.orng
fn main() -> Int {
    let x: (x: Int, y: Int) = (x = 4, 5)
    x.x
}